[package]
name = "async-net-server-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
async-net = "1.6.1"
async-io = "1.6.0"
async-rustls = "0.2.0"
log = "0.4.14"
rustls-acme = "0.2.0"
futures = "0.3.17"
anyhow = "1.0.44"
http = "0.2.5"
async-http-codec = { git = "https://github.com/FlorianUekermann/async-http-codec" }

[dev-dependencies]
simple_logger = "1.13.0"