[package]
name = "async-web-server"
version = "0.2.0"
edition = "2018"
description = "async web server helpers"
license = "Apache-2.0 OR MIT"

[dependencies]
async-net = "1.6.1"
async-io = "1.6.0"
async-rustls = "0.2.0"
log = "0.4.14"
rustls-acme = "0.2.0"
futures = "0.3.17"
anyhow = "1.0.44"
http = "0.2.5"
async-http-codec = "0.4.2"
async-ws = "0.3.2"
pin-project = "1.0.10"

[dev-dependencies]
simple_logger = "2.1.0"
async-global-executor = "2.0.4"