[package]
name = "async-web-server"
version = "0.7.0"
edition = "2018"
description = "async web server helpers"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/async-web-server"

[dependencies]
async-net = "1.6.1"
async-io = "1.6.0"
log = "0.4.14"
rustls-acme = "0.5.0"
futures = "0.3.17"
http = "0.2.5"
async-http-codec = "0.7.0"
async-ws = "0.3.2"
rustls-pemfile = "1.0.1"

[dev-dependencies]
simple_logger = "2.1.0"
smol = "1.2.5"
clap = { version = "3.1.18", features = ["derive"] }
rcgen = "0.9.3"
anyhow = "1.0.44"